--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/pg-adapter": "^0.2.14",
     "@supabase/supabase-js": "^2.39.8",
+    "@vercel/postgres": "^0.7.2",
     "clsx": "^2.1.0",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.5",
